# delirion

./: .gitignore  .gitmodules  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  build.bat  build.sh
design/: composited.psd  design.afdesign
src/: Bitcrusher.cpp  Bitcrusher.h  DopplerEffect.cpp  DopplerEffect.h  LFO.cpp  LFO.h  ParameterListener.h  ParameterSubscriber.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/modules/bitcrusher/: Bitcrusher.cpp
src/modules/doppler/: DopplerEffect.cpp  DopplerEffect.h
src/modules/interpolator/: CubicInterpolator.h  RateInterpolator.h
src/modules/oscillator/: LFO.cpp  LFO.h
src/modules/reverb/: Allpass.cpp  Allpass.h  Comb.cpp  Comb.h  Reverb.cpp  Reverb.h
src/modules/waveshaper/: WaveShaper.cpp  WaveShaper.h
src/utils/: Calc.h  Debug.h
